MR !1929: enable CI on GitLab
Closes #1162
https://gitlab.com/charliecloud/main/-/merge_requests/1929

Author: Reid Priedhorsky <reidpr@lanl.gov>
Merged by: Reid Priedhorsky <reidpr@lanl.gov>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,10 +1,6 @@
 SUBDIRS = lib bin doc examples misc packaging test
 
-# The CI stuff isn't really relevant for the tarballs, but they should
-# have complete source code.
-EXTRA_DIST = .github/PERUSEME .github/workflows/main.yml
-
-EXTRA_DIST += LICENSE README.rst VERSION autogen.sh
+EXTRA_DIST = LICENSE README.rst VERSION autogen.sh
 
 # Embedded paths are in the source code suitable for running from the source
 # directory (i.e., without install). When installing, those paths are often
