--- a/test/gitlab.com/pipeline.yml
+++ b/test/gitlab.com/pipeline.yml
@@ -8,6 +8,36 @@ variables:
   FF_SCRIPT_SECTIONS: true                        # tidier logs?
   FF_TIMESTAMPS: true                             # timestamps on log lines
   FF_USE_FASTZIP: true                            # faster archive creation
+  CH_PIPELINE_MODE:
+    description: "Pipeline mode to use."
+    value: ci
+    options:
+      - ci
+      - daily
+
+workflow:
+  name: "$CI_PIPELINE_SOURCE/$CI_COMMIT_BRANCH$CI_MERGE_REQUEST_IID/$CH_PIPELINE_MODE $CI_COMMIT_SHORT_SHA $CI_COMMIT_TITLE"
+  # This clause is mostly to prevent duplicate pipelines for merge requests.
+  # https://docs.gitlab.com/ee/ci/jobs/job_rules.html#avoid-duplicate-pipelines
+  rules:
+    - if: (    $CI_PIPELINE_SOURCE == "push"
+            && $CI_COMMIT_BRANCH != $CI_DEFAULT_BRANCH )
+      when: never
+    - when: always
+
+# We cannot use “rules” in “default”. Therefore, every job should use exactly
+# one of these anchors.
+.when-ci: &when-ci
+  rules:
+    - if: $CH_PIPELINE_MODE == "ci"
+      when: always
+.when-daily: &when-daily
+  rules:
+    - if: $CH_PIPELINE_MODE == "daily"
+      when: always
+.when-always: &when-always
+  rules:
+    - when: always
 
 default:
   # Default values for all the jobs.
@@ -33,6 +63,7 @@ ci-images:
   # [1]: https://docs.gitlab.com/ee/ci/docker/using_docker_build.html
   stage: bootstrap
   image: docker:27-cli       # client tools only?
+  <<: *when-always
   tags: ["saas-linux-medium-${ci_arch}"]
   parallel:
     matrix:
@@ -49,14 +80,28 @@ ci-images:
       | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
     - ./test/gitlab.com/build-images $ci_distro
 
+review-nag:
+  stage: ch
+  <<: *when-daily
+  tags: [saas-linux-small-amd64]
+  script: |
+    test/gitlab.com/reviews-email --to   $CH_DLQ_TO \
+                                  --from $CH_DLQ_FROM \
+                                  --host $CH_DLQ_HOST \
+                                  --port $CH_DLQ_PORT \
+                                  --user $CH_DLQ_USER \
+                                  --pass $CH_DLQ_PASS
+
 loc:
   stage: ch
+  <<: *when-ci
   tags: [saas-linux-small-amd64]
   script:
     - misc/loc
 
 test:
   stage: ch
+  <<: *when-ci
   tags: ["saas-linux-medium-${ci_arch}"]
   parallel:
     matrix:
