--- a/test/gitlab.com/pipeline.yml
+++ b/test/gitlab.com/pipeline.yml
@@ -40,8 +40,9 @@ workflow:
     - when: always
 
 default:
-  # Default values for all the jobs.
-  image: $CI_REGISTRY_IMAGE/ci_debian:latest
+  # Use an image tagged with the branch name because “:latest” is not
+  # well-defined if multiple branches are open (see issue #1981).
+  image: $CI_REGISTRY_IMAGE/ci_debian:$CI_COMMIT_REF_NAME
   artifacts:
     expire_in: 1 week
     name: ${CI_JOB_NAME}_${CI_COMMIT_SHORT_SHA}
@@ -78,7 +79,7 @@ ci-images:
   script:
     -   echo "$CI_REGISTRY_PASSWORD"
       | docker login $CI_REGISTRY -u $CI_REGISTRY_USER --password-stdin
-    - ./test/gitlab.com/build-images $ci_distro
+    - ./test/gitlab.com/build-images $ci_distro $CI_COMMIT_REF_NAME
 
 review-nag:
   stage: ch
