MR !1956: set up charliecloud.io
Closes #1377, #1982, and #1992
https://gitlab.com/charliecloud/main/-/merge_requests/1956

Author: Reid Priedhorsky <reidpr@lanl.gov>
Merged by: Reid Priedhorsky <reidpr@lanl.gov>

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ __pycache__
 # Vim crap.
 *.swp
 
+# VSCode crap.
+.vscode
+
 # Autotools crap. Coordinate with autogen.sh. Note negations.
 Makefile
 !/examples/*/Makefile
