--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@ a.out
 /bin/ch-image
 /bin/ch-run
 /bin/ch-run-oci
+/bin/ch-image.c
+/bin/ch-run-oci.c
 /examples/copy/dirCa/symlink-to-dirCb
 /examples/copy/dirD/symlink-to-fileDa
 /examples/copy/dirEa/symlink-to-dirEb
