Implement Charliecloud Daemon with systemd service integration
- Introduced a new daemon (`ch-daemon.py`) for managing Charliecloud containers via a REST API.
- Added a systemd service file (`ch-daemon.service`) for easy management of the daemon.
- Updated `.gitignore` to exclude new binaries and source files related to the daemon.
- Modified `Makefile.am` to include the daemon in the build process and ensure proper installation.
- Created a test script (`test.py`) to validate the functionality of the daemon and its endpoints.

This change enhances the usability of Charliecloud by providing a background service for container management.

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -4,7 +4,11 @@
 
 ## C programs
 
-bin_PROGRAMS = ch-checkns ch-run
+bin_PROGRAMS = charlie
+libexec_PROGRAMS = ch-checkns ch-run
+
+charlie_SOURCES = charlie.c
+charlie_CFLAGS = -DLIBEXECDIR="\"$(libexecdir)\""
 
 ch_checkns_SOURCES = ch-checkns.c ch_misc.h ch_misc.c
 
@@ -20,13 +24,12 @@ ch_run_LDADD = $(CH_RUN_LIBS)
 
 ## Shell scripts - distributed as-is
 
-dist_bin_SCRIPTS = ch-convert \
+libexec_SCRIPTS = ch-convert \
                    ch-fromhost \
                    ch-test
 
-
 # Build Python scripts as C extensions using Cython
-bin_PROGRAMS += ch-image ch-run-oci
+libexec_PROGRAMS += ch-image ch-daemon ch-run-oci
 
 ch_image_SOURCES = ch-image.c
 ch_run_oci_SOURCES = ch-run-oci.c
@@ -41,6 +44,11 @@ ch-image.c: ch-image.py
 ch-run-oci.c: ch-run-oci.py
 	rm -f $@
 	cython ch-run-oci.py --embed -3 -o ch-run-oci.c --module-name ch_run_oci
+	chmod +rx,-w $@  # respects umask
+
+ch-daemon.c: ch-daemon.py
+	rm -f $@
+	cython ch-daemon.py --embed -3 -o ch-daemon.c --module-name ch_daemon
 	chmod +rx,-w $@  # respects umask
 
 # Link with Python libraries
