Add clearstack service and update build configuration
- Introduced a new systemd service file (`clearstack.service`) for managing the Clearstack daemon.
- Updated `.gitignore` to include the newly added `ch-image` binary.
- Modified `Makefile.am` to replace the old `ch-daemon.service` with `clearstack.service` for installation and uninstallation processes.
- Adjusted build configuration in `bin/Makefile.am` to include the Clearstack daemon source files.

This change enhances the deployment and management of the Clearstack daemon within the systemd framework.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 SUBDIRS = lib bin doc examples misc packaging test
 
-EXTRA_DIST = LICENSE README.rst VERSION autogen.sh ch-daemon.service
+EXTRA_DIST = LICENSE README.rst VERSION autogen.sh clearstack.service
 
 # Embedded paths are in the source code suitable for running from the source
 # directory (i.e., without install). When installing, those paths are often
@@ -24,22 +24,22 @@ install-exec-hook:
 	done
 	@echo '### installing systemd service ###'
 	@if [ -z "$(DESTDIR)" ]; then \
-		sed 's|@bindir@|$(bindir)|g' ch-daemon.service > /tmp/ch-daemon.service.tmp; \
-		cp /tmp/ch-daemon.service.tmp /etc/systemd/system/ch-daemon.service; \
-		rm /tmp/ch-daemon.service.tmp; \
+		sed 's|@bindir@|$(bindir)|g' clearstack.service > /tmp/clearstack.service.tmp; \
+		cp /tmp/clearstack.service.tmp /etc/systemd/system/clearstack.service; \
+		rm /tmp/clearstack.service.tmp; \
 		touch /var/log/ch-daemon.log; \
 		chmod 644 /var/log/ch-daemon.log; \
 		systemctl daemon-reload; \
-		systemctl enable ch-daemon.service; \
-		systemctl start ch-daemon.service; \
+		systemctl enable clearstack.service; \
+		systemctl start clearstack.service; \
 	fi
 
 uninstall-hook:
 	@echo '### uninstalling systemd service ###'
 	@if [ -z "$(DESTDIR)" ]; then \
-		systemctl stop ch-daemon.service || true; \
-		systemctl disable ch-daemon.service || true; \
-		rm -f /etc/systemd/system/ch-daemon.service; \
+		systemctl stop clearstack.service || true; \
+		systemctl disable clearstack.service || true; \
+		rm -f /etc/systemd/system/clearstack.service; \
 		systemctl daemon-reload; \
 		rm -f /var/log/ch-daemon.log; \
 	fi
