Update clearstack service configuration and logging
- Changed the `ExecStart` path in `clearstack.service` to use the absolute path for the Charlie daemon.
- Modified the `Makefile.am` to create a new log file (`/var/log/clearstack.log`) and adjusted the installation process to manage temporary directories.
- Updated the temporary directory in `ch-daemon.py` to reflect the new naming convention.

These changes improve the clarity and functionality of the Clearstack service management.

--- a/Makefile.am
+++ b/Makefile.am
@@ -27,8 +27,9 @@ install-exec-hook:
 		sed 's|@bindir@|$(bindir)|g' clearstack.service > /tmp/clearstack.service.tmp; \
 		cp /tmp/clearstack.service.tmp /etc/systemd/system/clearstack.service; \
 		rm /tmp/clearstack.service.tmp; \
-		touch /var/log/ch-daemon.log; \
-		chmod 644 /var/log/ch-daemon.log; \
+		mkdir -p /tmp/clearstack; \
+		touch /var/log/clearstack.log; \
+		chmod 644 /var/log/clearstack.log; \
 		systemctl daemon-reload; \
 		systemctl enable clearstack.service; \
 		systemctl start clearstack.service; \
@@ -41,5 +42,6 @@ uninstall-hook:
 		systemctl disable clearstack.service || true; \
 		rm -f /etc/systemd/system/clearstack.service; \
 		systemctl daemon-reload; \
-		rm -f /var/log/ch-daemon.log; \
+		rm -f /var/log/clearstack.log; \
+		rm -rf /tmp/clearstack; \
 	fi
