--- a/clearstack.service
+++ b/clearstack.service
@@ -8,7 +8,7 @@ Wants=network.target
 Type=simple
 User=root
 Group=root
-ExecStart=@bindir@/charlie daemon --host 0.0.0.0 --port 8080 --max-workers 10
+ExecStart=/usr/local/bin/charlie daemon --host 0.0.0.0 --port 8080 --max-workers 10
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=mixed
 KillSignal=SIGTERM
