Update clearstack service and daemon configuration
- Added pre-execution commands in `clearstack.service` to create necessary directories for logging and temporary files.
- Changed the default port in both `clearstack.service` and `ch-daemon.py` from 8080 to 4242 for improved service management.
- Adjusted `ReadWritePaths` in `clearstack.service` to enhance logging capabilities.

These updates streamline the setup and operation of the Clearstack service.

--- a/clearstack.service
+++ b/clearstack.service
@@ -8,7 +8,9 @@ Wants=network.target
 Type=simple
 User=root
 Group=root
-ExecStart=/usr/local/bin/charlie daemon --host 0.0.0.0 --port 8080 --max-workers 10
+ExecStartPre=/bin/mkdir -p /tmp/clearstack
+ExecStartPre=/bin/mkdir -p /var/log
+ExecStart=/usr/local/bin/charlie daemon --host 0.0.0.0 --port 4242 --max-workers 10
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=mixed
 KillSignal=SIGTERM
@@ -21,10 +23,9 @@ SyslogIdentifier=clearstack
 
 # Security settings
 NoNewPrivileges=true
-PrivateTmp=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/tmp/clearstack /var/log/clearstack.log
+ReadWritePaths=/tmp/clearstack /var/log
 ProtectKernelTunables=true
 ProtectKernelModules=true
 ProtectControlGroups=true
