Rename Charliecloud to Clearstack throughout the codebase
- Updated all instances of "Charliecloud" to "Clearstack" in source files, documentation, and configuration to reflect the new branding.
- Modified relevant comments, README, and license files to ensure consistency with the Clearstack identity.
- Adjusted example scripts and Dockerfiles to demonstrate Clearstack functionality.

These changes enhance brand alignment and improve clarity across the project.

--- a/examples/Dockerfile.centos_7ch
+++ b/examples/Dockerfile.centos_7ch
@@ -2,7 +2,7 @@
 FROM centos:7
 
 # This image has two purposes: (1) demonstrate we can build a CentOS 7 image
-# and (2) provide a build environment for Charliecloud EPEL 7 RPMs.
+# and (2) provide a build environment for Clearstack EPEL 7 RPMs.
 
 # Install our dependencies, ensuring we fail out if any are missing.
 RUN yum install -y epel-release \
