--- a/packaging/fedora/build
+++ b/packaging/fedora/build
@@ -36,7 +36,7 @@ def main():
    ap.add_argument("--rpmbuild", metavar="DIR",
                    default="%s/rpmbuild" % os.getenv("HOME"))
    args = ap.parse_args()
-   print("# Charliecloud root:  %s" % CH_BASE)
+   print("# Clearstack root:  %s" % CH_BASE)
    print("architecture:       %s" % ARCH)
    print("""\
 version:            %(version)s
@@ -113,7 +113,7 @@ rpmbuild root:      %(rpmbuild)s
        "--", "make", "dist")
    ch_version = open(git_tmp + "/lib/version.txt").read()[:-1]
    ch_tarball = "charliecloud-%s.tar.gz" % ch_version
-   print("# Charliecloud version: %s" % ch_version)
+   print("# Clearstack version: %s" % ch_version)
    print("# source tarball: %s" % ch_tarball)
    os.rename("%s/%s" % (git_tmp, ch_tarball),
              "%s/%s" % (rpm_sources, ch_tarball))
