--- a/packaging/requirements.txt
+++ b/packaging/requirements.txt
@@ -1,6 +1,6 @@
 # This file contains the list of required python packages for the project in
 # requirements format. NOTE: It is provided on a “best effort” basis and is
-# not supported or maintained by the Charliecloud team. The source of truth
+# not supported or maintained by the Clearstack team. The source of truth
 # for all version dependencies is configure.ac. However, patches to keep it up
 # date are always welcome.
 
