Update project name in configure.ac to reflect Clearstack branding
- Changed the project name from "Charliecloud" to "clearstack" in the `configure.ac` file to ensure consistency with the new branding.
- This update aligns with previous changes made throughout the codebase to enhance brand identity.

--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@
 
 ### Prologue #################################################################
 
-AC_INIT([Clearstack], [m4_esyscmd_s([misc/version])],
+AC_INIT([clearstack], [m4_esyscmd_s([misc/version])],
         [https://github.com/hpc/charliecloud])
 AC_PREREQ([2.69])
 AC_CONFIG_SRCDIR([bin/ch-run.c])
