Rename ch-checkns, ch-completion, ch-convert, ch-daemon, and ch-image to more suitable names

--- a/bin/Makefile.am
+++ b/bin/Makefile.am
@@ -4,13 +4,13 @@
 
 ## C programs
 
-bin_PROGRAMS = charlie
-libexec_PROGRAMS = ch-checkns ch-run
+bin_PROGRAMS = clearstack
+libexec_PROGRAMS = checkns ch-run
 
-charlie_SOURCES = charlie.c
-charlie_CFLAGS = -DLIBEXECDIR="\"$(libexecdir)\""
+clearstack_SOURCES = clearstack.c
+clearstack_CFLAGS = -DLIBEXECDIR="\"$(libexecdir)\""
 
-ch_checkns_SOURCES = ch-checkns.c misc.h misc.c
+checkns_SOURCES = checkns.c misc.h misc.c
 
 ch_run_SOURCES = ch-run.c core.h core.c misc.h misc.c
 if HAVE_LIBSQUASHFUSE
@@ -24,22 +24,22 @@ ch_run_LDADD = $(CH_RUN_LIBS)
 
 ## Shell scripts - distributed as-is
 
-libexec_SCRIPTS = ch-convert \
+libexec_SCRIPTS = convert \
                    ch-fromhost \
                    ch-test
 
 # Build Python scripts as C extensions using Cython
-libexec_PROGRAMS += ch-image ch-daemon ch-run-oci
+libexec_PROGRAMS += image daemon ch-run-oci
 
-ch_image_SOURCES = ch-image.c
+image_SOURCES = image.c
 ch_run_oci_SOURCES = ch-run-oci.c
-ch_daemon_SOURCES = ch-daemon.c
+daemon_SOURCES = daemon.c
 ch_run_oci_CFLAGS = -Wno-unused-function
 
 # Cython compilation rules
-ch-image.c: ch-image.py
+image.c: image.py
 	rm -f $@
-	cython ch-image.py --embed -3 -o ch-image.c --module-name ch_image
+	cython image.py --embed -3 -o image.c --module-name image
 	chmod +rx,-w $@  # respects umask
 
 ch-run-oci.c: ch-run-oci.py
@@ -47,14 +47,14 @@ ch-run-oci.c: ch-run-oci.py
 	cython ch-run-oci.py --embed -3 -o ch-run-oci.c --module-name ch_run_oci
 	chmod +rx,-w $@  # respects umask
 
-ch-daemon.c: ch-daemon.py
+daemon.c: daemon.py
 	rm -f $@
-	cython ch-daemon.py --embed -3 -o ch-daemon.c --module-name ch_daemon
+	cython daemon.py --embed -3 -o daemon.c --module-name daemon
 	chmod +rx,-w $@  # respects umask
 
 # Link with Python libraries
-ch_image_LDADD = $(PYTHON_LIB)
+image_LDADD = $(PYTHON_LIB)
 ch_run_oci_LDADD = $(PYTHON_LIB)
-ch_daemon_LDADD = $(PYTHON_LIB)
+daemon_LDADD = $(PYTHON_LIB)
 
-CLEANFILES = ch-image.c ch-daemon.c ch-run-oci.c
+CLEANFILES = image.c daemon.c ch-run-oci.c
