--- a/examples/exhaustive/Dockerfile
+++ b/examples/exhaustive/Dockerfile
@@ -2,14 +2,14 @@
 # comprehensiveness of Dockerfile feature support.
 #
 # FIXME: That focus is a bit out of date. I think really what is here is the
-# ways we want to exercise ch-image in ways we care about the resulting image.
+# ways we want to exercise `clearstack image` in ways we care about the resulting image.
 # Exercises where we don’t care are in test/build/50_dockerfile.bats. But, I
 # don't want to do the refactoring right now.
 #
 # See: https://docs.docker.com/engine/reference/builder
 #
 # ch-test-scope: full
-# ch-test-builder-include: ch-image
+# ch-test-builder-include: image
 
 # Use a moderately complex image reference.
 FROM registry-1.docker.io:443/library/alpine:3.17 AS stage1
