--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Derived files (no Autotools stuff).
 *.o
 a.out
-/bin/charlie
-/bin/ch-checkns
+/bin/clearstack
+/bin/checkns
 /bin/ch-run
-/bin/ch-image
+/bin/image
 /bin/ch-run-oci
-/bin/ch-daemon
-/bin/ch-image.c
+/bin/daemon
+/bin/image.c
 /bin/ch-run-oci.c
-/bin/ch-daemon.c
+/bin/daemon.c
 /examples/copy/dirCa/symlink-to-dirCb
 /examples/copy/dirD/symlink-to-fileDa
 /examples/copy/dirEa/symlink-to-dirEb
