Refactor and rename Clearstack components to Clearly
- Updated project references from "clearstack" to "clearly" across the codebase, including source files, documentation, and configuration.
- Renamed binaries and commands to reflect the new branding, enhancing consistency and clarity.
- Adjusted service files, Makefile configurations, and test scripts to align with the new naming conventions.
- Improved logging and error messages to support the updated branding.

These changes ensure a cohesive identity for the Clearly project and improve overall clarity in the codebase.

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
 # Derived files (no Autotools stuff).
 *.o
 a.out
-/bin/clearstack
-/bin/checkns
-/bin/ch-run
-/bin/image
-/bin/ch-run-oci
-/bin/daemon
-/bin/image.c
-/bin/ch-run-oci.c
-/bin/daemon.c
+/bin/clearly
+/cmd/checkns
+/cmd/run
+/cmd/image
+/cmd/run-oci
+/cmd/daemon
+/cmd/image.c
+/cmd/run-oci.c
+/cmd/daemon.c
 /examples/copy/dirCa/symlink-to-dirCb
 /examples/copy/dirD/symlink-to-fileDa
 /examples/copy/dirEa/symlink-to-dirEb
@@ -73,9 +73,10 @@ Makefile.in
 /aclocal.m4
 /autom4te.cache/
 /bin/.deps/
-/bin/config.h
-/bin/config.h.in
-/bin/stamp-h1
+/cmd/.deps/
+/cmd/config.h
+/cmd/config.h.in
+/cmd/stamp-h1
 /build-aux/
 /config.log
 /config.status
