--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
-SUBDIRS = lib bin doc examples misc packaging test
+SUBDIRS = lib bin cmd doc examples misc packaging test
 
-EXTRA_DIST = LICENSE README.rst VERSION autogen.sh clearstack.service
+EXTRA_DIST = LICENSE README.rst VERSION autogen.sh clearly.service
 
 # Embedded paths are in the source code suitable for running from the source
 # directory (i.e., without install). When installing, those paths are often
@@ -9,39 +9,39 @@ EXTRA_DIST = LICENSE README.rst VERSION autogen.sh clearstack.service
 # others are just sh.
 install-exec-hook:
 	@echo '### re-writing embedded paths ###'
-	for i in $(DESTDIR)@bindir@/convert \
-	         $(DESTDIR)@bindir@/ch-fromhost \
-	         $(DESTDIR)@bindir@/ch-test \
-	         $(DESTDIR)@libdir@/charliecloud/base.sh \
-	         $(DESTDIR)@libexecdir@/charliecloud/doctest; \
+	for i in $(DESTDIR)@libexecdir@/clearly/convert \
+	         $(DESTDIR)@libexecdir@/clearly/ch-fromhost \
+	         $(DESTDIR)@libexecdir@/clearly/ch-test \
+	         $(DESTDIR)@libexecdir@/clearly/doctest \
+			 $(DESTDIR)@libdir@/clearly/base.sh; \
 	do \
 	  if [ -e $$i ]; then \
-	    sed -Ei -e 's|^(ch_lib ?= ?).+/lib"?$$|\1"@libdir@/charliecloud"|'\
-	            -e 's|^(CHTEST_DIR=).+$$|\1@libexecdir@/charliecloud|' \
+	    sed -Ei -e 's|^(ch_lib ?= ?).+/lib"?$$|\1"@libdir@/clearly"|'\
+	            -e 's|^(CHTEST_DIR=).+$$|\1@datadir@/clearly|' \
 	            -e 's|^(CHTEST_EXAMPLES_DIR=).+$$|\1@docdir@/examples|' \
                 $$i; \
 	  fi \
 	done
 	@echo '### installing systemd service ###'
 	@if [ -z "$(DESTDIR)" ]; then \
-		sed 's|@bindir@|$(bindir)|g' clearstack.service > /tmp/clearstack.service.tmp; \
-		cp /tmp/clearstack.service.tmp /etc/systemd/system/clearstack.service; \
-		rm /tmp/clearstack.service.tmp; \
-		mkdir -p /tmp/clearstack; \
-		touch /var/log/clearstack.log; \
-		chmod 644 /var/log/clearstack.log; \
+		sed 's|@bindir@|$(bindir)|g' clearly.service > /tmp/clearly.service.tmp; \
+		cp /tmp/clearly.service.tmp /etc/systemd/system/clearly.service; \
+		rm /tmp/clearly.service.tmp; \
+		mkdir -p /tmp/clearly; \
+		touch /var/log/clearly.log; \
+		chmod 644 /var/log/clearly.log; \
 		systemctl daemon-reload; \
-		systemctl enable clearstack.service; \
-		systemctl start clearstack.service; \
+		systemctl enable clearly.service; \
+		systemctl start clearly.service; \
 	fi
 
 uninstall-hook:
 	@echo '### uninstalling systemd service ###'
 	@if [ -z "$(DESTDIR)" ]; then \
-		systemctl stop clearstack.service || true; \
-		systemctl disable clearstack.service || true; \
-		rm -f /etc/systemd/system/clearstack.service; \
+		systemctl stop clearly.service || true; \
+		systemctl disable clearly.service || true; \
+		rm -f /etc/systemd/system/clearly.service; \
 		systemctl daemon-reload; \
-		rm -f /var/log/clearstack.log; \
-		rm -rf /tmp/clearstack; \
+		rm -f /var/log/clearly.log; \
+		rm -rf /tmp/clearly; \
 	fi
