--- a/clearly.service
+++ b/clearly.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Clearstack Daemon
-Documentation=https://clearstackhq.com/docs
+Documentation=https://clearly.run/docs
 After=network.target
 Wants=network.target
 
@@ -8,9 +8,9 @@ Wants=network.target
 Type=simple
 User=root
 Group=root
-ExecStartPre=/bin/mkdir -p /tmp/clearstack
+ExecStartPre=/bin/mkdir -p /tmp/clearly
 ExecStartPre=/bin/mkdir -p /var/log
-ExecStart=/usr/local/bin/clearstack daemon --host 0.0.0.0 --port 4242 --max-workers 10
+ExecStart=/usr/local/bin/clearly daemon --host 0.0.0.0 --port 4242 --max-workers 10
 ExecReload=/bin/kill -HUP $MAINPID
 KillMode=mixed
 KillSignal=SIGTERM
@@ -19,13 +19,13 @@ Restart=on-failure
 RestartSec=5
 StandardOutput=journal
 StandardError=journal
-SyslogIdentifier=clearstack
+SyslogIdentifier=clearly
 
 # Security settings
 NoNewPrivileges=true
 ProtectSystem=strict
 ProtectHome=true
-ReadWritePaths=/tmp/clearstack /var/log
+ReadWritePaths=/tmp/clearly /var/log
 ProtectKernelTunables=true
 ProtectKernelModules=true
 ProtectControlGroups=true
