--- a/examples/chtest/Build
+++ b/examples/chtest/Build
@@ -42,7 +42,7 @@ cd "$workdir"
 #
 # For most Build scripts, we’d simply error out with missing prerequisites,
 # but this is a core image that much of the test suite depends on.
-ch_run="ch-run -u0 -g0 -w ${img}"
+run="clearly run -u0 -g0 -w ${img}"
 
 ## Bootstrap base Alpine Linux.
 
@@ -63,7 +63,7 @@ echo ${mirror}/main > img/etc/apk/repositories
 #
 # This will give a few errors about chown failures. However, the install does
 # seem to work, so we ignore the failed exit code.
-$ch_run -- /sbin/apk.static \
+$run -- /sbin/apk.static \
            --allow-untrusted --initdb --update-cache \
            add alpine-base apk-tools \
   || true
@@ -73,11 +73,11 @@ $ch_run -- /sbin/apk.static \
 rm img/sbin/apk.static.*
 
 # Install packages we need for our tests.
-$ch_run -- /sbin/apk add gcc make musl-dev python3 || true
+$run -- /sbin/apk add gcc make musl-dev python3 || true
 
 # Validate the install.
-$ch_run -- /sbin/apk audit --system
-$ch_run -- /sbin/apk stats
+$run -- /sbin/apk audit --system
+$run -- /sbin/apk stats
 
 # Fix permissions.
 #
@@ -97,7 +97,7 @@ touch img/home/file-in-home
 
 # Test programs.
 cp -r "$srcdir" img/test
-$ch_run --cd /test -- sh -c 'make clean && make'
+$run --cd /test -- sh -c 'make clean && make'
 
 # Fixtures for /dev cleaning.
 touch img/dev/deleteme
@@ -125,7 +125,7 @@ chmod 0777 img/maxperms_file
 mkdir img/maxperms_dir
 chmod 1777 img/maxperms_dir
 
-# Get rid of “/root” directory, used for “HOME” test in “ch-run_misc.bats”.
+# Get rid of “/root” directory, used for “HOME” test in “run_misc.bats”.
 rmdir "$img"/root
 
 ## Tar it up.
