Update project to use pip-installed Python dependencies and remove bundled Lark
- Replaced the bundled Lark package with a requirements.txt file for Python dependencies, allowing for easier management and updates.
- Updated installation instructions in the README and added a new script for installing dependencies.
- Removed references to bundled Lark from the codebase, including configuration and build files.
- Adjusted the .gitignore to exclude the old Lark files and updated Makefile configurations to reflect the new dependency management approach.

These changes streamline the installation process and improve the maintainability of Python dependencies.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Derived files (no Autotools stuff).
 *.o
 a.out
+/lib/*.c
+/lib/*.so
 /bin/clearly
 /cmd/checkns
 /cmd/run
@@ -25,9 +27,6 @@ a.out
 /doc/html/
 /doc/man/*.[17]
 /lib/contributors.bash
-/lib/lark
-/lib/lark-stubs
-/lib/lark*.dist-info
 /lib/version.py
 /lib/version.sh
 /lib/version.txt
