--- a/test/Dockerfile.metadata
+++ b/test/Dockerfile.metadata
@@ -1,6 +1,6 @@
 # This Dockerfile is used to test metadata pulling (issue #651). It includes
 # all the instructions that seemed like they ought to create metadata, even if
-# unsupported by ch-image.
+# unsupported by clearly image.
 #
 # Scope is “skip” because we pull the image to test it; see
 # test/build/50_pull.bats.
